@startuml

class Plan
class User
class Profile

PlanList o--> Plan : aggregation

Owner --|> User
Plan *--> "1" Owner
Plan *--> "1" Location
Plan *--> "1" Time
Plan *--> "1" Chat
Plan *--> "1" Privacy
Plan *--> "1" Title
Plan *--> "1" Category
Plan *--> Atendees

Atendees o--> User
User *--> Profile
Profile o--> "1" PlanList

@enduml